Added an addTask section

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -74,6 +74,12 @@
 
                 </div>
 
+                <!-- Add Task Area -->
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="data.value>0">
+                    <h2><i class="fa fa-tasks"></i> Add/Remove Tasks</h2>
+                    <p></p>
+                    <button class="btn btn-primary btn-lg"><i class="fa fa-plus"></i> Add Task</button>
+                </div>
             </div>
         </div>
     </div>
