--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -78,7 +78,7 @@
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="data.value>0">
                     <h2><i class="fa fa-tasks"></i> Add/Remove Tasks</h2>
                     <p></p>
-                    <button class="btn btn-primary btn-lg"><i class="fa fa-plus"></i> Add Task</button>
+                    <button class="btn btn-primary btn-lg" (click)="addTasksToPlanner(i)"><i class="fa fa-plus"></i> Add Task</button>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
     <div class="btn-group" role="group" aria-label="...">
         <button type="button" [ngClass]="{'active': i==data.value}" class="btn btn-default btn-lg" *ngFor="let n of assignments| keys; let i = index" (click)="goToQ(i)">{{ getValue(i, n.value.symbol) }}</button>
-        <button type="button" class="btn btn-primary btn-lg" (click)="addTask()">Save Changes</button>
+        <button type="button" class="btn btn-primary btn-lg" (click)="addTask()">Save &amp; Generate</button>
     </div>
     <p></p>
     <p></p>
