--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -88,8 +88,9 @@
 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
     <div class="btn-group" role="group" aria-label="...">
         <button type="button" [ngClass]="{'active': i==data.value}" class="btn btn-default btn-lg" *ngFor="let n of assignments| keys; let i = index" (click)="goToQ(i)">{{ getValue(i, n.value.symbol) }}</button>
-        <button type="button" class="btn btn-primary btn-lg" (click)="addTask()">Save &amp; Generate</button>
     </div>
+    <button type="button" class="btn btn-warning btn-lg" (click)="addTask()"><i class="fa fa-plus"></i> Add Assignment</button>
+    <button type="button" class="btn btn-primary btn-lg" (click)="addTask()">Save &amp; Generate</button>
     <p></p>
     <p></p>
 </div>
