--- a/src/app/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip.component.html
@@ -1,4 +1,4 @@
-<div class="tooltip animated fadeIn" *ngIf="d.value.show==true">
-    <i class="fa fa-book"></i> Assignment: {{ d.value.symbol}}
+<div class="tooltip animated fadeIn" *ngIf="d.show==true">
+    <i class="fa fa-book"></i> Assignment: {{ d.symbol}}
 </div>
 <!-- [ngStyle]="{'left': d.value.tooltip.left+'px'}" -->
