--- a/src/app/custom/custom.component.html
+++ b/src/app/custom/custom.component.html
@@ -1,8 +1,8 @@
-<div *ngFor="let d of assignments | keys; let i = index">
-<div class="twoTasks" *ngIf="d.value.type=='custom' && i==data.value">
+<div *ngFor="let d of assignments; let i = index">
+<div class="twoTasks" *ngIf="d.type=='custom' && i==data.value">
 
-  <div class="taskA col-md-12 col-lg-6 col-sm-12 col-xs-12" *ngFor="let t of d.value.tasks | keys">
-    <app-tasks class="tasks" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [title]="t.value.name" [information]="t.value.information" [d]="d" [ui]="ui"></app-tasks>
+  <div class="taskA col-md-12 col-lg-6 col-sm-12 col-xs-12" *ngFor="let t of d.tasks">
+    <app-tasks class="tasks" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [title]="t.name" [information]="t.information" [d]="d" [ui]="ui"></app-tasks>
   </div>
 
 </div>
