--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -38,10 +38,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="comp col-md-12 col-lg-12 col-xs-12 col-sm-12" *ngFor="let c of data.competencies | keys; let j = index">
-                            <div class="circleComp col-md-2 col-lg-2 col-sm-2 col-xs-2" [ngStyle]="{'background': colorType(c.value.type), 'border-color': colorType(c.value.type)}">{{ c.value.letter }}</div>
+                        <div class="comp col-md-12 col-lg-12 col-xs-12 col-sm-12" *ngFor="let c of data.competencies; let j = index">
+                            <div class="circleComp col-md-2 col-lg-2 col-sm-2 col-xs-2" [ngStyle]="{'background': colorType(c.type), 'border-color': colorType(c.type)}">{{ c.letter }}</div>
                             <div class="col-md-10 col-lg-10 col-sm-10 col-xs-10">
-                                <p>{{ c.value.text }}</p>
+                                <p>{{ c.text }}</p>
                             </div>
                             <p></p>
                         </div>
