--- a/src/app/print/print.component.html
+++ b/src/app/print/print.component.html
@@ -1,12 +1,12 @@
 <!-- the printed area -->
-<li *ngFor="let d of assignments | keys; let i = index">
-    <h2 class="printTitle col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="i>0 && i<amount-1" [ngStyle]="{'color': ui?.colors?.fourth}"><button class="smallcircle" (click)="goTo(i)" [ngStyle]="{'background': ui?.colors?.third, 'border-color': ui?.colors?.third, 'border-style': 'solid'}">{{ i }}</button>  {{ d.value.title }}</h2>
+<li *ngFor="let d of assignments; let i = index">
+    <h2 class="printTitle col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="i>0 && i<amount-1" [ngStyle]="{'color': ui?.colors?.fourth}"><button class="smallcircle" (click)="goTo(i)" [ngStyle]="{'background': ui?.colors?.third, 'border-color': ui?.colors?.third, 'border-style': 'solid'}">{{ i }}</button>  {{ d.title }}</h2>
     <!-- choices -->
-    <div class="two col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='task'">
+    <div class="two col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.type=='task'">
         <!-- <img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" /> -->
         <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
-        <div *ngFor="let t of d.value.tasks | keys">
-            <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="t.value.select==true || d.value.tasks.length==1" [ngStyle]="{'color': ui?.text?.color}"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
+        <div *ngFor="let t of d.tasks">
+            <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="t.select==true || d.tasks.length==1" [ngStyle]="{'color': ui?.text?.color}"><b>{{ t.name }}</b>: {{ t.information }}</p>
         </div>
     </div>
 </li>
