--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -1,7 +1,7 @@
 <!-- instructions area -->
 <div class="intro">
     <h2 class="titles" [ngStyle]="{'color': ui?.subheadings?.color}">Instructions</h2>
-    <p class="alert alert-info" [ngStyle]="{'background': '#F5F5F5', 'border-color': '#F5F5F5', 'color': ui?.text?.color}">{{ assignments[0].instructions }}</p>
+    <p class="alert alert-info" [ngStyle]="{'background': '#F5F5F5', 'border-color': '#F5F5F5', 'color': ui?.text?.color}">{{ data.instructions.instructions }}</p>
     <h2 class="titles" [ngStyle]="{'color': ui?.subheadings?.color}"> Keyboard Shortcuts </h2>
     <p class="alert alert-warning" [ngStyle]="{'background': '#F5F5F5', 'border-color': '#F5F5F5', 'color': ui?.text?.color}">
       Text will be here
