--- a/src/app/heading/heading.component.html
+++ b/src/app/heading/heading.component.html
@@ -1,6 +1,7 @@
 <!--s
     title and subtitle with symbol
  -->
+ <div *ngIf="data.value >= 0">
     <div class="header" *ngFor="let d of assignments; let i = index">
 
       <div class="symbol pull-left hidden-xs" *ngIf="i==data.value" [ngStyle]="{'background-color': ui?.buttons?.hover, 'color': ui?.symbol?.color, 'border-color': ui?.buttons?.hover}">{{ headingOutput(i, d.symbol) }}</div>
@@ -13,4 +14,20 @@
       <div class="symbol col-xs-3 visible-xs" *ngIf="i==data.value" [ngStyle]="{'background': ui?.colors?.third, 'color': ui?.text?.color}">{{ headingOutput(i, d.symbol) }}</div>
       <h1 class="sub col-xs-9 visible-xs" *ngIf="i!=1 && i==data.value" [ngStyle]="{'color': ui?.subheading?.color}">{{  d.title }}</h1>
       <h1 class="subForLarge col-xs-9 visible-xs" *ngIf="i==1 && i==data.value" [ngStyle]="{'color': ui?.subheading?.color}">{{ d.title }}</h1>
+    </div>
+</div>
+
+<!-- instructions -->
+    <div class="header" *ngIf="data.value == -1">
+
+      <div class="symbol pull-left hidden-xs" [ngStyle]="{'background-color': ui?.buttons?.hover, 'color': ui?.symbol?.color, 'border-color': ui?.buttons?.hover}">{{ data?.instructions?.symbol }}</div>
+
+      <h1 class="sub pull-left padding-left hidden-xs" [ngStyle]="{'color': ui?.colors?.fourth}">{{ data?.instructions?.title }}</h1>
+      <!--show if short text -->
+      <h1 class="subForLarge pull-left padding-left hidden-xs" *ngIf="i==1 && i==data.value" [ngStyle]="{'color': ui?.colors?.fourth}">{{ data?.instructions?.title }}</h1>
+      <!--show if long text -->
+      <!-- mobile text -->
+      <div class="symbol col-xs-3 visible-xs" [ngStyle]="{'background': ui?.colors?.third, 'color': ui?.text?.color}">{{ data?.instructions?.symbol }}</div>
+      <h1 class="sub col-xs-9 visible-xs"  [ngStyle]="{'color': ui?.subheading?.color}">{{ data?.instructions?.title }}</h1>
+      <h1 class="subForLarge col-xs-9 visible-xs" [ngStyle]="{'color': ui?.subheading?.color}">{{ data?.instructions?.title }}</h1>
     </div>
