--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,14 +3,20 @@
 <!--<app-tooltip></app-tooltip>-->
 <!-- These are the cicle buttons at the bottom nav-->
 <ul class="nav nav-justified buttonList">
+	<li class="list">
+    <button type="button" class="numButtons circle" id="r" (click)="goToStart()" [ngStyle]="{'background': getCurrentColor(ui?.buttons?.color, ui?.buttons?.hover), 'border-color': getCurrentColor(ui?.buttons?.color, ui?.buttons?.hover)}">
+          S
+      </button>
+      <div id="line" class="hidden-xs hidden-sm"></div>
+  	</li>
     <li *ngFor="let d of assignments; let i = index" class="list">
     <button type="button" class="numButtons circle" id={{i}} (click)="goTo(i)" [ngStyle]="{'background': currentColor(i), 'border-color': currentColor(i)}">
-          {{ navOutput(i, d.symbol) }}
+          {{ i+1 }}
       </button>
       <div id="line" class="hidden-xs hidden-sm" *ngIf="i<=assignments.length"></div>
   </li>
   <li class="list">
-    <button type="button" class="numButtons circle" id="r" [ngStyle]="{'background': ui?.buttons?.color, 'border-color': ui?.buttons?.color}">
+    <button type="button" class="numButtons circle" id="r" (click)="showReview()" [ngStyle]="{'background': ui?.buttons?.color, 'border-color': ui?.buttons?.color}">
           R
       </button>
   </li>
