--- a/src/app/next/next.component.html
+++ b/src/app/next/next.component.html
@@ -1,3 +1,3 @@
-<button id="next" (click)="next()" *ngIf="data.value < amount-1">
+<button id="next" (click)="next()" *ngIf="data.value < assignments?.length-1">
 	<i class="fa fa-chevron-right next" [ngStyle]="{'color': ui?.buttons?.color}"></i>
 </button>
