--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -14,7 +14,7 @@
 
                 <div class="input-group" *ngIf="data.value==-1">
                     <span class="input-group-addon">Planner Title: </span>
-                    <input type="text" class="form-control" placeholder="Enter Planner Title" [value]="appTitle" [(ngModel)]="appTitle" (ngModelChange)="data.course_title = $event" required>
+                    <input type="text" class="form-control" [value]="appTitle" [(ngModel)]="appTitle" (ngModelChange)="data.course_title = $event" required>
                 </div>
                 <!--   <div class="input-group">
                         <span class="input-group-addon">Symbol Letter: </span>
@@ -27,11 +27,11 @@
                     <p *ngIf="data.value==-1"></p>
                     <div class="input-group">
                         <span class="input-group-addon">Assignment title: </span>
-                        <input type="text" class="form-control" placeholder="Enter Assignment Title" [(ngModel)]="QuestionTitle" [value]="QuestionTitle" (ngModelChange)="data.instructions.title = $event" required>
+                        <input type="text" class="form-control" [(ngModel)]="QuestionTitle" [value]="QuestionTitle" (ngModelChange)="data.instructions.title = $event" required>
                     </div>
                     <div class="input-group" *ngIf="data.value==-1">
                         <span class="input-group-addon">Instructions: </span>
-                        <textarea type="text" class="form-control" placeholder="Enter Instructions" [(ngModel)]="Instructions" maxlength="300" [value]="Instructions" (ngModelChange)="data.instructions.instructions = $event" required></textarea>
+                        <textarea type="text" class="form-control" [(ngModel)]="Instructions" maxlength="300" [value]="Instructions" (ngModelChange)="data.instructions.instructions = $event" required></textarea>
                     </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
 <!-- assignments -->
 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngFor="let c of assignments; let i = index">
     <div class="contentArea" *ngIf="i==data.value">
-        <h2>{{ getValue(i, c.symbol) }}) {{ c.title }}</h2>
+        <h2>{{ i+1 }}) {{ c.title }}</h2>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title"> Settings </h3>
@@ -54,11 +54,11 @@
                     
                     <div class="input-group">
                         <span class="input-group-addon">Assignment title: </span>
-                        <input type="text" class="form-control" placeholder="Enter Assignment Title" [(ngModel)]="QuestionTitle" [value]="QuestionTitle" (ngModelChange)="c.title = $event" required>
+                        <input type="text" class="form-control"  [(ngModel)]="QuestionTitle" [value]="QuestionTitle" (ngModelChange)="c.title = $event" required>
                     </div>
                     <div class="input-group" *ngIf="data.value>=0">
                         <span class="input-group-addon">Assignment Information: </span>
-                        <textarea type="text" class="form-control" placeholder="Enter Assignment Information" [(ngModel)]="asstInformation" [value]="asstInformation" maxlength="300" (ngModelChange)="c.instructions = $event" required></textarea>
+                        <textarea type="text" class="form-control"  [(ngModel)]="asstInformation" [value]="asstInformation" maxlength="300" (ngModelChange)="c.instructions = $event" required></textarea>
                     </div>
                     <p></p>
                 </div>
@@ -68,15 +68,15 @@
                     <p *ngIf="data.value>=0"></p>
                     <div class="input-group" *ngIf="data.value>=0">
                         <span class="input-group-addon">Month: </span>
-                        <input type="text" class="form-control" placeholder="Enter Month" [(ngModel)]="Month" [value]="Month" (ngModelChange)="c.due_date[0].month = $event">
+                        <input type="text" class="form-control"  [(ngModel)]="Month" [value]="Month" (ngModelChange)="c.due_date[0].month = $event">
                     </div>
                     <div class="input-group" *ngIf="data.value>=0">
                         <span class="input-group-addon">Day: </span>
-                        <input type="text" class="form-control" placeholder="Enter Day" [(ngModel)]="Day" [value]="Day" (ngModelChange)="c.due_date[0].day = $event">
+                        <input type="text" class="form-control"  [(ngModel)]="Day" [value]="Day" (ngModelChange)="c.due_date[0].day = $event">
                     </div>
                     <div class="input-group" *ngIf="data.value>=0">
                         <span class="input-group-addon">Percentage: </span>
-                        <input type="text" class="form-control" placeholder="Enter Assignment Percentage" [(ngModel)]="Percentage" [value]="Percentage" (ngModelChange)="c.due_date[0].percentage = $event">
+                        <input type="text" class="form-control"  [(ngModel)]="Percentage" [value]="Percentage" (ngModelChange)="c.due_date[0].percentage = $event">
                     </div>
                     <p></p>
                 </div>
@@ -101,7 +101,7 @@
         <button type="button" [ngClass]="{'active': i==data.value}" class="btn btn-default btn-lg" *ngFor="let n of assignments; let i = index" (click)="goToQ(i)">Task {{ i+1 }}</button>
     </div>
     
-    <button type="button" class="btn btn-primary btn-lg" (click)="addTask()" *ngIf="data.value>0">Save &amp; Generate</button>
+    <button type="button" class="btn btn-default btn-lg pull-right" (click)="addTask()" *ngIf="data.value>0">Save &amp; Generate</button>
     <p></p>
     <p></p>
 </div>
