--- a/src/app/heading/heading.component.html
+++ b/src/app/heading/heading.component.html
@@ -4,7 +4,7 @@
  <div *ngIf="data.value >= 0">
     <div class="header" *ngFor="let d of assignments; let i = index">
 
-      <div class="symbol pull-left hidden-xs" *ngIf="i==data.value" [ngStyle]="{'background-color': ui?.buttons?.hover, 'color': ui?.symbol?.color, 'border-color': ui?.buttons?.hover}">{{ headingOutput(i, d.symbol) }}</div>
+      <div class="symbol pull-left hidden-xs" *ngIf="i==data.value" [ngStyle]="{'background-color': ui?.buttons?.hover, 'color': ui?.symbol?.color, 'border-color': ui?.buttons?.hover}">{{ i+1 }}</div>
 
       <h1 class="sub pull-left padding-left hidden-xs" *ngIf="i!=1 && i==data.value" [ngStyle]="{'color': ui?.colors?.fourth}">{{  d.title }}</h1>
       <!--show if short text -->
