--- a/src/app/previous/previous.component.html
+++ b/src/app/previous/previous.component.html
@@ -1,3 +1,3 @@
-<button id="prev" (click)="prev()" *ngIf="data.value>=-1">
+<button id="prev" (click)="prev()" *ngIf="data.value>-1">
 	<i class="fa fa-chevron-left prev" [ngStyle]="{'color': ui?.buttons?.color}"></i>
 </button>
