--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,8 @@
+<!-- save button -->
+<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+    <p></p>
+    <button type="button" class="btn btn-default btn-lg pull-right" (click)="addTask()" *ngIf="data.value>=-1">Save &amp; Generate</button>
+</div>
 <!--instructions -->
 <!-- Title and symbol -->
 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="data.value == -1">
@@ -7,11 +12,9 @@
             <h3 class="panel-title"> Settings </h3>
         </div>
         <div class="panel-body">
-
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12" *ngIf="data.value==-1">
                 <h2 *ngIf="data.value==-1"><i class="fa fa-file-text"></i> Planner Information</h2>
                 <p *ngIf="data.value==-1"></p>
-
                 <div class="input-group" *ngIf="data.value==-1">
                     <span class="input-group-addon">Planner Title: </span>
                     <input type="text" class="form-control" [value]="appTitle" [(ngModel)]="appTitle" (ngModelChange)="data.course_title = $event" required>
@@ -21,23 +24,21 @@
                         <input type="text" class="form-control" placeholder="Enter Symbol Here..." [(ngModel)]="Symbol" [value]="Symbol" (ngModelChange)="c.symbol = $event" required>
                     </div> -->
             </div>
-
             <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12" *ngIf="data.value==-1">
                 <h2 *ngIf="data.value==-1"><i class="fa fa-file-text"></i> Title and Instructions</h2>
-                    <p *ngIf="data.value==-1"></p>
-                    <div class="input-group">
-                        <span class="input-group-addon">Assignment title: </span>
-                        <input type="text" class="form-control" [(ngModel)]="QuestionTitle" [value]="QuestionTitle" (ngModelChange)="data.instructions.title = $event" required>
-                    </div>
-                    <div class="input-group" *ngIf="data.value==-1">
-                        <span class="input-group-addon">Instructions: </span>
-                        <textarea type="text" class="form-control" [(ngModel)]="Instructions" maxlength="300" [value]="Instructions" (ngModelChange)="data.instructions.instructions = $event" required></textarea>
-                    </div>
+                <p *ngIf="data.value==-1"></p>
+                <div class="input-group">
+                    <span class="input-group-addon">Assignment title: </span>
+                    <input type="text" class="form-control" [(ngModel)]="QuestionTitle" [value]="QuestionTitle" (ngModelChange)="data.instructions.title = $event" required>
+                </div>
+                <div class="input-group" *ngIf="data.value==-1">
+                    <span class="input-group-addon">Instructions: </span>
+                    <textarea type="text" class="form-control" [(ngModel)]="Instructions" maxlength="300" [value]="Instructions" (ngModelChange)="data.instructions.instructions = $event" required></textarea>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
 <!-- assignments -->
 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngFor="let c of assignments; let i = index">
     <div class="contentArea" *ngIf="i==data.value">
@@ -51,14 +52,13 @@
                 <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
                     <h2 *ngIf="data.value>=0"><i class="fa fa-file-text"></i> Assignment Information</h2>
                     <p *ngIf="data.value>=0"></p>
-                    
                     <div class="input-group">
                         <span class="input-group-addon">Assignment title: </span>
-                        <input type="text" class="form-control"  [(ngModel)]="QuestionTitle" [value]="QuestionTitle" (ngModelChange)="c.title = $event" required>
+                        <input type="text" class="form-control" [(ngModel)]="QuestionTitle" [value]="QuestionTitle" (ngModelChange)="c.title = $event" required>
                     </div>
                     <div class="input-group" *ngIf="data.value>=0">
                         <span class="input-group-addon">Assignment Information: </span>
-                        <textarea type="text" class="form-control"  [(ngModel)]="asstInformation" [value]="asstInformation" maxlength="300" (ngModelChange)="c.instructions = $event" required></textarea>
+                        <textarea type="text" class="form-control" [(ngModel)]="asstInformation" [value]="asstInformation" maxlength="300" (ngModelChange)="c.instructions = $event" required></textarea>
                     </div>
                     <p></p>
                 </div>
@@ -68,15 +68,15 @@
                     <p *ngIf="data.value>=0"></p>
                     <div class="input-group" *ngIf="data.value>=0">
                         <span class="input-group-addon">Month: </span>
-                        <input type="text" class="form-control"  [(ngModel)]="Month" [value]="Month" (ngModelChange)="c.due_date[0].month = $event">
+                        <input type="text" class="form-control" [(ngModel)]="Month" [value]="Month" (ngModelChange)="c.due_date[0].month = $event">
                     </div>
                     <div class="input-group" *ngIf="data.value>=0">
                         <span class="input-group-addon">Day: </span>
-                        <input type="text" class="form-control"  [(ngModel)]="Day" [value]="Day" (ngModelChange)="c.due_date[0].day = $event">
+                        <input type="text" class="form-control" [(ngModel)]="Day" [value]="Day" (ngModelChange)="c.due_date[0].day = $event">
                     </div>
                     <div class="input-group" *ngIf="data.value>=0">
                         <span class="input-group-addon">Percentage: </span>
-                        <input type="text" class="form-control"  [(ngModel)]="Percentage" [value]="Percentage" (ngModelChange)="c.due_date[0].percentage = $event">
+                        <input type="text" class="form-control" [(ngModel)]="Percentage" [value]="Percentage" (ngModelChange)="c.due_date[0].percentage = $event">
                     </div>
                     <p></p>
                 </div>
@@ -94,14 +94,19 @@
 </div>
 <!--navigation-->
 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-    <div class="btn-group" role="group" aria-label="...">
-        <button type="button" [ngClass]="{'active': data.value == -1}" class="btn btn-default btn-lg" (click)="goToStart()">S</button>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="btn-group" role="group" aria-label="...">
+                <button type="button" [ngClass]="{'active': data.value == -1}" class="btn btn-default btn-lg" (click)="goToStart()">Starting Page</button>
+            </div>
+            <div class="btn-group" role="group" aria-label="...">
+                <button type="button" [ngClass]="{'active': i==data.value}" class="btn btn-default btn-lg" *ngFor="let n of assignments; let i = index" (click)="goToQ(i)">Task {{ i+1 }}</button>
+            </div>
+            <div class="btn-group" role="group" aria-label="...">
+                <button type="button" [ngClass]="{'active': data.value == -1}" class="btn btn-default btn-lg" (click)="goToStart()">Review Page</button>
+            </div>
+        </div>
     </div>
-    <div class="btn-group" role="group" aria-label="...">
-        <button type="button" [ngClass]="{'active': i==data.value}" class="btn btn-default btn-lg" *ngFor="let n of assignments; let i = index" (click)="goToQ(i)">Task {{ i+1 }}</button>
-    </div>
-    
-    <button type="button" class="btn btn-default btn-lg pull-right" (click)="addTask()" *ngIf="data.value>0">Save &amp; Generate</button>
     <p></p>
     <p></p>
 </div>
