json can be updated and generated

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,7 +1,7 @@
 <!-- save button -->
 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
     <p></p>
-    <button type="button" class="btn btn-default btn-lg pull-right" (click)="addTask()" *ngIf="data.value>=-1">Save &amp; Generate</button>
+    <button type="button" class="btn btn-default btn-lg pull-right" (click)="saveToFile()" *ngIf="data.value>=-1">Save &amp; Generate</button>
 </div>
 <!--instructions -->
 <!-- Title and symbol -->
